@@ -2,7 +2,6 @@ package de.tum.cit.aet.artemis.exercise.web;
 
 import static de.tum.cit.aet.artemis.core.config.Constants.PROFILE_CORE;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -119,7 +118,7 @@ public class SubmissionResource {
             resultService.deleteResult(result, true);
         }
         // We have to set the results to an empty list because otherwise clearing the build log entries does not work correctly
-        submission.get().setResults(Collections.emptyList());
+        submission.get().setResults(List.of());
         if (submission.get() instanceof ProgrammingSubmission programmingSubmission) {
             buildLogEntryService.deleteBuildLogEntriesForProgrammingSubmission(programmingSubmission);
         }
